Adding the missing sections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="row fill-screen-height">
         <div class="content col">
           <h4 class="brand">Brand</h4>
-          <h1 class="title">Trabalhando para empresas nos EUA?</h1>
+          <h1 class="title">Trabalhando no Brasil para empresas dos EUA?</h1>
           <h3 class="subtitle">Nowmatic (está trabalhando no) é o jeito mais rápido e barato para brasileiros receberem dinheiro de empresas americanas.</h3>
 
           <form class="waitlist-form" action="">
@@ -37,10 +37,54 @@
       </div>
     </header>
 
-    <section></section>
-    <section></section>
-    <section></section>
-    <footer></footer>
+    <section class="least-expensive">
+      <div class="row">
+        <div class="col">
+          <div class="image"></div>
+        </div>
+        <div class="content col">
+          <h1 class="title">O mais barato, garantimos!</h1>
+          <p class="subtitle">Se você encontrar uma solução mais barata, devolvemos a diferença e ainda creditamos R$ 25 reais</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="fastest">
+      <div class="row">
+        <div class="content col">
+          <h1 class="title">O mais rápido!</h1>
+          <p class="subtitle">Receba seu dinheiro em segundos.</p>
+        </div>
+        <div class="col">
+          <div class="image"></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="security">
+      <div class="row">
+        <div class="col">
+          <div class="image"></div>
+        </div>
+        <div class="content col">
+          <h1 class="title">Segurança</h1>
+          <p class="subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, laborum.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="how-it-works">
+      <h1 class="title">Um novo jeito de receber dinheiro</h1>
+      <p>Ao invés de usar a rede tradicional dos bancos, a Nowmatic usa soluções mais rápidas baseadas na tecnologia das Blockchains.</p>
+      <p>
+        Acreditamos que a experiência dos brasileiros que recebem dinheiro do exterior pode ser muito melhor, com menos taxas e mais
+        rapidez, e é por isto que estamos trabalhando em uma nova plataforma, totalmente regulamentada e segura.
+      </p>
+    </section>
+
+    <footer>
+      <small>Copyright © 2020, Nowmatic</small>
+    </footer>
   </main>
 </body>
 </html>
