Making the website mobile friendly

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="content col">
           <h1 class="title">O mais barato, garantimos!</h1>
-          <p class="subtitle">Se você encontrar uma solução mais barata, devolvemos a diferença e ainda creditamos R$ 25 reais</p>
+          <p class="subtitle">Se você encontrar uma solução mais barata, devolvemos a diferença e ainda creditamos R$ 25 reais em sua conta</p>
         </div>
       </div>
     </section>
