Adding Nowmatic logo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="row fill-screen-height">
         <div class="col">
           <div class="content">
-            <h4 class="brand">Brand</h4>
+            <img class="logo" src="./assets/images/logo.png" alt="nowmatic logo" width="200px">
             <h1 class="title">Trabalhando para empresas americanas?</h1>
             <h2 class="subtitle">
               Estamos desenvolvendo uma plataforma que pode mudar a maneira como você recebe seus pagamentos do exterior.
