--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nowmatic</title>
   <link rel="stylesheet" href="assets/style/index.css">
+  <link rel="icon" type="image/png" href="./assets/images/favicon.png">
 </head>
 
 <body>
